<resources>
    <string name="app_name">Inventory Management</string>

    <string name="fragment_category">Category</string>
    <string name="fragment_sub_category">Sub Category</string>
    <string name="fragment_product">Products</string>
    <string name="fragment_product_detail">Product Detail</string>
    <string name="fragment_dashboard">Dashboard</string>

    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_products">Products</string>
    <string name="nav_customers">Customers</string>
    <string name="nav_orders">Orders</string>

    <string name="lbl_cat_id">Category Id</string>
    <string name="lbl_cat_name">Category Name</string>

    <string name="lbl_active">Active</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_block">Block</string>

    <string name="title_edit_cat">Edit Category</string>
    <string name="title_add_cat">Add Category</string>
    <string name="title_fab_cat">Add/Edit Category</string>

    <string name="title_edit_supplier">Edit Supplier</string>
    <string name="title_add_supplier">Add Supplier</string>
    <string name="title_fab_supplier">Add/Edit Supplier</string>

    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>

    <string name="hint_select_cat">Category</string>
    <string name="hint_select_sub_cat">Sub Category</string>

    <string name="lbl_sub_cat">Sub Category</string>
    <string name="title_edit_sub_cat">Edit Sub Category</string>
    <string name="title_add_sub_cat">Add Sub Category</string>

    <string name="lbl_prdct_name">Product Name</string>
    <string name="lbl_prdct_desc">Product Description</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="lbl_color">Color</string>
    <string name="lbl_size">Size</string>
    <string name="btn_add_variant">Add Variant</string>
    <string name="title_add_variant">Add Product Variant</string>
    <string name="title_edit_variant">Edit Product Variant</string>
    <string name="lbl_price_val">Price : %.2f</string>

    <string name="title_customer">Customers</string>
    <string name="title_edit_cust">Edit Customer</string>
    <string name="title_add_cust">Add Customer</string>
    <string name="title_fab_cust">Add/Edit Customer</string>

    <string name="lbl_cust_id">Id</string>
    <string name="lbl_cust_name">Name</string>
    <string name="lbl_cust_email">Email</string>
    <string name="lbl_cust_mobile">Mobile</string>
    <string name="lbl_cust_password">Password</string>

    <string name="title_supplier">Suppliers</string>
    <string name="title_edit_sup">Edit Supplier</string>
    <string name="title_add_sup">Add Supplier</string>
    <string name="title_fab_sup">Add/Edit Supplier</string>

    <string name="lbl_sup_id">Id</string>
    <string name="lbl_sup_name">Name</string>
    <string name="lbl_sup_email">Email</string>
    <string name="lbl_sup_mobile">Mobile</string>
    <string name="lbl_sup_password">Password</string>


</resources>