<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.fidato.inventorymngmnt.ui.master.viewmodel.AddEditCategoryViewModel" />

        <variable
            name="cateogry"
            type="com.fidato.inventorymngmnt.data.model.master.Category" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cnstrntlyt_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cnstrntlyt_main"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_cat_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:hint="@string/lbl_cat_id"
                    app:error="@{vm.errCatId}"
                    app:errorEnabled="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiedttxt_cat_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={cateogry.id}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_cat_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_cat_name"
                    app:error="@{vm.errCatName}"
                    app:errorEnabled="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_cat_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiedttxt_cat_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={cateogry.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> vm.validateCatData()}"
                    android:text="@string/btn_save"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/no_data"
                layout="@layout/no_data_view"
                android:visibility="gone" />

            <include
                android:id="@+id/prgrs"
                layout="@layout/progress_indicator"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>